# agent_networking

./: .env.sample  .gitignore  API_DOCUMENTATION.md  Makefile  README.md  TODO.md  a2a_validation_results.json  load_config.py  pyproject.toml  requirements.txt  run_a2a_system.py  start_all_agents.py  start_registry.py  start_services.py  tailwind.config.js  test.py  test_a2a_end_to_end.py  test_a2a_protocol.py  test_agent_communication.py  test_agents.py  test_frontend_integration.html  test_llm_router.py  test_real_a2a_agents.py
.devcontainer/: devcontainer.json
adk/: README.md  __init__.py  a2a_gateway.py  a2a_main.py  exa_client.py  monitoring.py  networking_agent_a2a.py  personal_agent_a2a.py  rag_shield.py  redis_vector_store.py  requirements.txt  restaurant_agent_a2a.py
adk/concert_selector/: A2A.py  __init__.py  config.json  main.py
adk/event_selector/: A2A.py  __init__.py  config.json  main.py
adk/restaurant_selector/: .env  .env.sample  A2A.py  __init__.py  config.json  main.py
adk/utils/: __init__.py  exa_search.py
agents/: agent_client.py  alice_agent.py  bob_agent.py  charlie_agent.py  list_routes.py  personal_agent.py  user_agent_template.py
backend/: api_endpoints.py  main.py  networking_api.py  test_server.py
frontend/: README.md  index.html  package.json  server.py  tailwind.config.js  vite.config.ts
frontend-nextjs/: package-lock.json  package.json
frontend-nextjs/src/app/: layout.tsx  page.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentChat.tsx  AgentDashboard.tsx  AgentMap.tsx  AgentSettings.tsx  AssistantResults.tsx  AssistantSidebar.tsx  ChatInput.tsx  FriendCarousel.tsx  GoogleMap.tsx  MapView.tsx  PinDetailCard.tsx
frontend/src/services/: api.ts
networking/: networking.py
orchestrator/: README.md  __init__.py  chat.html  collaborative_middleware.py  interview.html  main.py  orchestrator.db  preferences_schema.py  test_login.html
router/: router.py
src/: App.tsx
src/components/: AssistantSidebar.tsx  ChatInput.tsx  FriendCarousel.tsx  MapView.tsx  PinDetailCard.tsx
wandb/: latest-run
wandb/run-20250712_165811-smmfkwhf/: run-smmfkwhf.wandb
wandb/run-20250712_165811-smmfkwhf/files/: config.yaml  wandb-metadata.json
wandb/run-20250712_165827-hbqeaps4/: run-hbqeaps4.wandb
wandb/run-20250712_165827-hbqeaps4/files/: config.yaml  wandb-metadata.json
wandb/run-20250712_165840-a5qxc663/: run-a5qxc663.wandb
wandb/run-20250712_165840-a5qxc663/files/: config.yaml  wandb-metadata.json
wandb/run-20250712_165853-2epfn2n1/: run-2epfn2n1.wandb
wandb/run-20250712_165853-2epfn2n1/files/: config.yaml  wandb-metadata.json
wandb/run-20250712_165908-ugxtiyub/: run-ugxtiyub.wandb
wandb/run-20250712_165908-ugxtiyub/files/: config.yaml  wandb-metadata.json
wandb/run-20250712_165923-6l3doqea/: run-6l3doqea.wandb
wandb/run-20250712_165923-6l3doqea/files/: config.yaml  (+1 more)
wandb/run-20250712_165938-jjlsi7mc/: run-jjlsi7mc.wandb
wandb/run-20250712_170944-6dclztbd/: run-6dclztbd.wandb
wandb/run-20250712_171037-v7nq5ptl/: run-v7nq5ptl.wandb
wandb/run-20250712_171116-3t3hs349/: run-3t3hs349.wandb
wandb/run-20250712_171116-ih33nx1v/: run-ih33nx1v.wandb
wandb/run-20250712_171116-rfownpky/: run-rfownpky.wandb
wandb/run-20250712_171159-no0ah6b4/: run-no0ah6b4.wandb
wandb/run-20250712_171308-1mhmv4ov/: run-1mhmv4ov.wandb
wandb/run-20250712_171504-l8l50icf/: run-l8l50icf.wandb
wandb/run-20250712_171933-9bc0hw1p/: run-9bc0hw1p.wandb
wandb/run-20250712_172524-tdnfga97/: run-tdnfga97.wandb
wandb/run-20250712_172606-gm5442ab/: run-gm5442ab.wandb
wandb/run-20250712_172755-z2z7ep6y/: run-z2z7ep6y.wandb
wandb/run-20250712_173208-klhmu6i1/: run-klhmu6i1.wandb
wandb/run-20250712_173248-hpu30pvr/: run-hpu30pvr.wandb
wandb/run-20250712_173324-um66qmxp/: run-um66qmxp.wandb
wandb/run-20250712_173617-qgu5dvix/: run-qgu5dvix.wandb
(+55 files in other folders)
